Switch to Docker build to fix Nixpacks deployment issue

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ NODE_ENV = 'production'
 NEXT_TELEMETRY_DISABLED = '1'
 
 [phases.install]
-cmds = ['npm ci --prefer-offline --no-audit']
+cmds = ['npm ci']
 
 [phases.build]
 cmds = ['npm run build']
