--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,10 +3,10 @@ NODE_ENV = 'production'
 NEXT_TELEMETRY_DISABLED = '1'
 
 [phases.install]
-cmds = ['npm ci']
+cmds = ['npm ci --prefer-offline --no-audit']
 
 [phases.build]
-cmds = ['npm run build']
+cmds = ['NODE_OPTIONS="--max-old-space-size=8192" npm run build']
 
 [phases.start]
 cmd = 'npm start'
